; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_ukbd.c_ukbd_clear_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_ukbd.c_ukbd_clear_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.ukbd_softc* }
%struct.ukbd_softc = type { i32, i32, i32, i32, i32, i64*, i64, i64, i32 }

@UKBD_FLAG_COMPOSE = common dso_local global i32 0, align 4
@UKBD_FLAG_POLLING = common dso_local global i32 0, align 4
@LOCK_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @ukbd_clear_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ukbd_clear_state(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.ukbd_softc*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load %struct.ukbd_softc*, %struct.ukbd_softc** %5, align 8
  store %struct.ukbd_softc* %6, %struct.ukbd_softc** %3, align 8
  %7 = call i32 (...) @UKBD_LOCK_ASSERT()
  %8 = load i32, i32* @UKBD_FLAG_COMPOSE, align 4
  %9 = load i32, i32* @UKBD_FLAG_POLLING, align 4
  %10 = or i32 %8, %9
  %11 = xor i32 %10, -1
  %12 = load %struct.ukbd_softc*, %struct.ukbd_softc** %3, align 8
  %13 = getelementptr inbounds %struct.ukbd_softc, %struct.ukbd_softc* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = and i32 %14, %11
  store i32 %15, i32* %13, align 8
  %16 = load i32, i32* @LOCK_MASK, align 4
  %17 = load %struct.ukbd_softc*, %struct.ukbd_softc** %3, align 8
  %18 = getelementptr inbounds %struct.ukbd_softc, %struct.ukbd_softc* %17, i32 0, i32 8
  %19 = load i32, i32* %18, align 8
  %20 = and i32 %19, %16
  store i32 %20, i32* %18, align 8
  %21 = load %struct.ukbd_softc*, %struct.ukbd_softc** %3, align 8
  %22 = getelementptr inbounds %struct.ukbd_softc, %struct.ukbd_softc* %21, i32 0, i32 7
  store i64 0, i64* %22, align 8
  %23 = load %struct.ukbd_softc*, %struct.ukbd_softc** %3, align 8
  %24 = getelementptr inbounds %struct.ukbd_softc, %struct.ukbd_softc* %23, i32 0, i32 6
  store i64 0, i64* %24, align 8
  %25 = load %struct.ukbd_softc*, %struct.ukbd_softc** %3, align 8
  %26 = getelementptr inbounds %struct.ukbd_softc, %struct.ukbd_softc* %25, i32 0, i32 4
  %27 = call i32 @memset(i32* %26, i32 0, i32 4)
  %28 = load %struct.ukbd_softc*, %struct.ukbd_softc** %3, align 8
  %29 = getelementptr inbounds %struct.ukbd_softc, %struct.ukbd_softc* %28, i32 0, i32 3
  %30 = call i32 @memset(i32* %29, i32 0, i32 4)
  %31 = load %struct.ukbd_softc*, %struct.ukbd_softc** %3, align 8
  %32 = getelementptr inbounds %struct.ukbd_softc, %struct.ukbd_softc* %31, i32 0, i32 2
  %33 = call i32 @memset(i32* %32, i32 0, i32 4)
  %34 = load %struct.ukbd_softc*, %struct.ukbd_softc** %3, align 8
  %35 = getelementptr inbounds %struct.ukbd_softc, %struct.ukbd_softc* %34, i32 0, i32 1
  %36 = call i32 @memset(i32* %35, i32 0, i32 4)
  ret void
}

declare dso_local i32 @UKBD_LOCK_ASSERT(...) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
